# traverse-backend-wa

./: .gitignore  README.md  pyproject.toml  test_clerk_auth.py  test_webhook.py
app/: main.py
app/api/routers/: auth.py  calendar.py  chat.py  events.py  itineraries.py  places.py  webhooks.py
app/core/: activity_diversity.py  auth.py  clerk_auth.py  clerk_security.py  conversation_manager.py  cover_image_service.py  csrf_middleware.py  destination_profiling_service.py  email_service.py  foursquare_service.py  geo_utils.py  invite_utils.py  itinerary_planner.py  llm_provider.py  opening_hours_utils.py  places_service.py  preference_aggregator.py  preference_extractor.py  repository.py  schemas.py  security.py  semantic_category_service.py  semantic_matcher.py  settings.py  travel_time_utils.py
infra/: nginx-traverse.conf
itinerarytemplate/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
itinerarytemplate/src/: App.tsx  config.ts  index.css
itinerarytemplate/src/components/: CoverPage.tsx  DayPage.tsx  LoadingScreen.tsx  NavigationControls.tsx  NotesPage.tsx  ParticipantsPage.tsx
itinerarytemplate/src/components/figma/: ImageWithFallback.tsx
scripts/: start.sh  test_itinerary_generation.py  test_places_api.py  test_preference_extraction.py
tests/integration/: test_api_integration.py  test_webhook.py
tests/unit/: test_clerk_auth.py  test_users_unit.py
