[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kidenomics-backend-wa"
version = "0.0.0"
description = "fastapi service"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.29"}
pydantic = ">=2.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
ruff = ">=0.5"
black = ">=24.3.0"
mypy = ">=1.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["B","C4","E","F","I","N","PL","PT","RUF","SIM","TID","UP","W"]
ignore = ["E203","E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false


