[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "traverse-backend-wa"
version = "0.0.0"
description = "fastapi service"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pydantic = "^2.6.4"
pymongo = "^4.6.2"
geopy = "^2.4.1"
beautifulsoup4 = "^4.12.3"
anthropic = "^0.25.0"
google-generativeai = "^0.4.1"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
python-clerk = "^0.0.1"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.126.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
haversine = "^2.8.0"
aiohttp = "^3.9.5"
fastapi-csrf-protect = "^0.3.2"
sentence-transformers = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
ruff = ">=0.5"
black = ">=24.3.0"
mypy = ">=1.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["B","C4","E","F","I","N","PL","PT","RUF","SIM","TID","UP","W"]
ignore = ["E203","E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false


